fix overflow scroll issue with nav bar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -90,6 +90,7 @@ body {
 }
 
 .stop-scrolling {
-  height: 100%;
-  overflow: hidden;
+  position:fixed;
+  overflow-y: scroll;
+  width: 100%;
 }
